cabal-version:   3.0
name:            feather-language
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      thomas.vergne.contact@gmail.com
author:          thomasvergne
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Language.Feather.CST
        Language.Feather.CST.Literal
        Language.Feather.CST.Type
        Language.Feather.CST.Expression
        Language.Feather.CST.Annotation
        Language.Feather.Parser
        Language.Feather.Parser.Lexer
        Language.Feather.Parser.Modules.Literal
        Language.Feather.Parser.Modules.Operator
        Language.Feather.Parser.Modules.Expression
        Language.Feather.Parser.Modules.Type

        Prettyprinter.CST
        Prettyprinter.Annotation
        Prettyprinter.ANSI

        Print

    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions: OverloadedStrings
    ghc-options:        -Wall -Wno-orphans
    build-depends:
        base ^>=4.19.0.0,
        megaparsec ^>=9.6.1,
        containers,
        mtl,
        parser-combinators,
        relude,
        prettyprinter,
        prettyprinter-ansi-terminal

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude

executable feather-language
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   GHC2021
    default-extensions: OverloadedStrings
    ghc-options:        -Wall
    build-depends:
        base ^>=4.19.0.0,
        feather-language,
        megaparsec ^>=9.6.1,
        relude

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude

test-suite feather-language-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.19.0.0,
        feather-language
