cabal-version:   3.0
name:            plume-language
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      thomas.vergne.contact@gmail.com
author:          thomasvergne
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Plume.Syntax.Internal.Pretty.ANSI

        Plume.Syntax.Concrete
        Plume.Syntax.Concrete.Literal
        Plume.Syntax.Concrete.Type
        Plume.Syntax.Concrete.Expression
        Plume.Syntax.Concrete.Annotation
        Plume.Syntax.Concrete.Internal.Pretty

        Plume.Syntax.Parser
        Plume.Syntax.Parser.Lexer
        Plume.Syntax.Parser.Modules.Literal
        Plume.Syntax.Parser.Modules.Operator
        Plume.Syntax.Parser.Modules.Expression
        Plume.Syntax.Parser.Modules.Type

        System.IO.Pretty

    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions: OverloadedStrings
    ghc-options:        -Wall -Wno-orphans
    build-depends:
        base ^>=4.19.0.0,
        megaparsec ^>=9.6.1,
        containers,
        mtl,
        parser-combinators,
        relude,
        prettyprinter,
        prettyprinter-ansi-terminal

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude

executable plume-language
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   GHC2021
    default-extensions: OverloadedStrings
    ghc-options:        -Wall
    build-depends:
        base ^>=4.19.0.0,
        plume-language,
        megaparsec ^>=9.6.1,
        relude

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude

test-suite plume-language-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.19.0.0,
        plume-language
