cabal-version:   3.0
name:            plume
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      thomas.vergne.contact@gmail.com
author:          thomasvergne
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Plume.Syntax.Internal.Pretty.ANSI

        Plume.Syntax.Concrete
        Plume.Syntax.Concrete.Expression
        Plume.Syntax.Concrete.Internal.Show
        Plume.Syntax.Concrete.Internal.Pretty

        Plume.Syntax.Common
        Plume.Syntax.Common.Literal
        Plume.Syntax.Common.Type
        Plume.Syntax.Common.Pattern
        Plume.Syntax.Common.Annotation
        Plume.Syntax.Common.Internal.Pretty

        Plume.Syntax.Parser
        Plume.Syntax.Parser.Parser
        Plume.Syntax.Parser.Lexer
        Plume.Syntax.Parser.Modules.Literal
        Plume.Syntax.Parser.Modules.Operator
        Plume.Syntax.Parser.Modules.Slice
        Plume.Syntax.Parser.Modules.Type
        Plume.Syntax.Parser.Modules.Pattern
        Plume.Syntax.Parser.Modules.ParseImports

        Plume.Syntax.Abstract
        Plume.Syntax.Abstract.Expression
        Plume.Syntax.Abstract.Internal.Pretty
        
        Plume.Syntax.Translation.Generics
        Plume.Syntax.Translation.ConcreteToAbstract
        Plume.Syntax.Translation.ConcreteToAbstract.Operations
        Plume.Syntax.Translation.ConcreteToAbstract.Require
        Plume.Syntax.Translation.ConcreteToAbstract.MacroResolver
        Plume.Syntax.Translation.ConcreteToAbstract.UFCS
        Plume.Syntax.Translation.Substitution

        Plume.TypeChecker.TLIR
        Plume.TypeChecker.TLIR.Syntax
        Plume.TypeChecker.TLIR.Synonyms
        Plume.TypeChecker.TLIR.Modules.Pattern
        Plume.TypeChecker.TLIR.Internal.Pretty

        Plume.TypeChecker.Monad
        Plume.TypeChecker.Monad.State
        Plume.TypeChecker.Monad.Type
        Plume.TypeChecker.Monad.Error
        Plume.TypeChecker.Monad.Free
        Plume.TypeChecker.Monad.Conversion

        Plume.TypeChecker.Checker
        Plume.TypeChecker.Checker.Monad
        Plume.TypeChecker.Checker.Application
        Plume.TypeChecker.Checker.Declaration
        Plume.TypeChecker.Checker.Closure
        Plume.TypeChecker.Checker.Condition
        Plume.TypeChecker.Checker.Extension
        Plume.TypeChecker.Checker.Datatype
        Plume.TypeChecker.Checker.Switch
        Plume.TypeChecker.Checker.Native
        
        Plume.TypeChecker.Constraints.Definition
        Plume.TypeChecker.Constraints.Unification
        Plume.TypeChecker.Constraints.Solver

        Plume.Compiler.ClosureConversion.Syntax
        Plume.Compiler.ClosureConversion.Free
        Plume.Compiler.ClosureConversion.Conversion

        Plume.Compiler.TypeErasure.Syntax
        Plume.Compiler.TypeErasure.EraseType
        Plume.Compiler.TypeErasure.DynamicDispatch.Dispatch
        Plume.Compiler.TypeErasure.DynamicDispatch.BundleExtensions
        Plume.Compiler.TypeErasure.DynamicDispatch.RTTI

        Plume.Compiler.Desugaring.Syntax
        Plume.Compiler.Desugaring.Desugar
        Plume.Compiler.Desugaring.Monad
        Plume.Compiler.Desugaring.Modules.ANF
        Plume.Compiler.Desugaring.Modules.Switch

        Plume.Compiler.SSA
        Plume.Compiler.SSA.DeadCode
        Plume.Compiler.SSA.Bundler

        Plume.Compiler.Bytecode.Syntax
        Plume.Compiler.Bytecode.Assembler
        Plume.Compiler.Bytecode.Serialize

        System.IO.Pretty

        Control.Monad.IO
        Control.Monad.Parser
        Control.Monad.Exception

        GHC.Records

    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions: 
      OverloadedStrings
      OverloadedRecordDot
      TemplateHaskell
      DataKinds
    ghc-options:        -Wall -Wno-orphans
    build-depends:
        base ^>=4.19.0.0,
        megaparsec ^>=9.6.1,
        containers,
        mtl,
        parser-combinators,
        relude,
        prettyprinter,
        prettyprinter-ansi-terminal,
        filepath,
        directory,
        text,
        binary,
        template-haskell,
        MissingH,
        sorted-list

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude

executable plume
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   GHC2021
    default-extensions: OverloadedStrings
    ghc-options:        -Wall -O2
    build-depends:
        base ^>=4.19.0.0,
        plume,
        relude,
        filepath,
        directory

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude),
        relude

test-suite plume-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.19.0.0,
        plume
